--- a/Zivalske_Ordinacije/MainWindow.xaml
+++ b/Zivalske_Ordinacije/MainWindow.xaml
@@ -1,11 +1,15 @@
 ﻿<Window x:Class="Zivalske_Ordinacije.MainWindow"
+        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Zivalske_Ordinacije"
         mc:Ignorable="d"
-        Title="MainWindow" Height="525" Width="1000" Loaded="Window_Loaded">
+        Title="MainWindow" Height="525" Width="1000" Loaded="Window_Loaded"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen">
+        
     <Window.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
             <GradientStop Color="Aqua"  Offset="0.1" />
@@ -14,7 +18,7 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid>
-        <Grid Name="MainGrid" Visibility="Visible">
+        <Grid Name="MainGrid" Visibility="Hidden">
             <Label Content="Prijavljeni ste kot:" HorizontalAlignment="Left" Margin="23,60,0,0" VerticalAlignment="Top" 
                    FontSize="25" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
             <Label x:Name="LabelPrikaz" Content="" HorizontalAlignment="Left" Margin="218,62,0,0" VerticalAlignment="Top" 
@@ -117,7 +121,7 @@
                 </Button.Background>
             </Button>
             <Button x:Name="Edit" Content="Edit" Foreground="White" FontFamily="Calibri"
-                    FontSize="24" HorizontalAlignment="Left" Margin="532,413,0,0" VerticalAlignment="Top"
+                    FontSize="24" HorizontalAlignment="Left" Margin="531,425,0,0" VerticalAlignment="Top"
                     RenderTransformOrigin="1.086,-1.158"
                     Height="40" Width="120" Click="Edit_Click" >
                 <Button.Template>
@@ -138,6 +142,7 @@
             <Label Content="Živalske Ordinacije" HorizontalAlignment="Left" Margin="29,42,0,0" VerticalAlignment="Top" 
                    FontSize="30" FontFamily="Calibri" FontWeight="ExtraBold" Foreground="BlueViolet"/>
             <ListView x:Name="listView" ItemsSource="{Binding}" Margin="29,94,391,94" SelectionChanged="listView_SelectionChanged">
+                
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="ID" DisplayMemberBinding="{Binding id_o}"/>
@@ -165,9 +170,10 @@
                    Foreground="BlueViolet" FontWeight="Bold" FontSize="18"/>
             <Label  Content="Kraj" HorizontalAlignment="Left" Margin="651,294,0,0" VerticalAlignment="Top"
                    Foreground="BlueViolet" FontWeight="Bold" FontSize="18"/>
-            <ComboBox x:Name="Kraji" HorizontalAlignment="Left" Margin="703,302,0,0" VerticalAlignment="Top" Width="236"/>
+            <ComboBox x:Name="Kraji" HorizontalAlignment="Left" Margin="703,302,0,0" VerticalAlignment="Top" Width="236">
+            </ComboBox>
             <Button x:Name="Add" Content="Add" Foreground="White" FontFamily="Calibri"
-                    FontSize="24" HorizontalAlignment="Left" Margin="821,413,0,0" VerticalAlignment="Top"
+                    FontSize="24" HorizontalAlignment="Left" Margin="821,425,0,0" VerticalAlignment="Top"
                     RenderTransformOrigin="1.086,-1.158"
                     Height="40" Width="120" Click="Add_Click">
                 <Button.Template>
@@ -186,7 +192,7 @@
                 </Button.Background>
             </Button>
             <Button x:Name="Delete" Content="Delete" Foreground="White" FontFamily="Calibri"
-                    FontSize="24" HorizontalAlignment="Left" Margin="680,413,0,0" VerticalAlignment="Top"
+                    FontSize="24" HorizontalAlignment="Left" Margin="680,425,0,0" VerticalAlignment="Top"
                     RenderTransformOrigin="1.086,-1.158"
                     Height="40" Width="120" Click="Delete_Click" >
                 <Button.Template>
@@ -314,7 +320,7 @@
                 </Button.Background>
             </Button>
         </Grid>
-        <Grid Name="GridOddelek" Visibility="Hidden">
+        <Grid Name="GridOddelek" Visibility="Visible">
             <ComboBox x:Name="OddelekIme" HorizontalAlignment="Left" Margin="39,71,0,0" VerticalAlignment="Top" Width="236" SelectionChanged="OddelekIme_SelectionChanged"/>
             <Label  Content="Oddelek" HorizontalAlignment="Left" Margin="39,38,0,0" VerticalAlignment="Top"
                    Foreground="BlueViolet" FontWeight="Bold" FontSize="18"/>
